[package]
edition = "2021"
name = "mc_server_scanner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
netstat = "0.7.0"
protospec = {git = "https://github.com/MGlolenstine/protospec"}
tokio = {version = "1.17.0", features = ["full"]}
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

[build-dependencies]
proc-macro2 = "1.0.36"
protospec-build = {git = "https://github.com/MGlolenstine/protospec"}
quote = "1.0.15"
